crates/strider-analyze/tests/snapshots/v2__arm__calls__mutual_a.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x5c8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "8" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "16" -> "11" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "17" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "11" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nr1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v19" [color="#888888", style=dashed];
  "v19" -> "17" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v20" [color="#888888", style=dashed];
  "v20" -> "17" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v21" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v21" [color="#888888", style=dashed];
  "v21" -> "17" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "v22" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v22" [color="#888888", style=dashed];
  "v22" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "12" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "26" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "6" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "16" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "29" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "31" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "33" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "31" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "35" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "37" -> "29" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "37" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "24" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
